fix alignment of scroll down button for IE

--- a/src/assets/scss/components/module/_scroll-down.scss
+++ b/src/assets/scss/components/module/_scroll-down.scss
@@ -20,16 +20,14 @@
   button.scroll-down-reverse {
     position: absolute;
     bottom:rem-calc(-26);
-    left: -4px;
-    right: 0;
     height: 50px;
-    width: 12px;
     z-index: 1000;
   }
 
   button.scroll-down:before,
   button.scroll-down-reverse:before {
     position: absolute;
+    right: -7px;
     content: '';
     width: 6px;
     height: 6px;
